Made changes across hr module